# metaProtease

./: .gitignore  LICENSE  README.md  environment.yml  pyproject.toml
analysis/pca/: .swp  1_pca.R  2_species-loadings.R  3_gene-loadings.R  pca_coordinates.tsv  pca_feature_loadings.tsv  pca_feature_loadings_sorted_by_PC1.tsv  pca_feature_loadings_sorted_by_PC2.tsv
hpc/: 00_protease_tree.slurm  01_reference-map-index.slurm  02_reference-map-map.slurm  03_fasta_to_gtf.slurm  04_reference-count-filtsam.slurm  05_reference-count-filtsam.slurm  06_database-map-map.slurm  07_database-map-woltka-classify-taxa.slurm  08_database-map-woltka-classify-gene.slurm  09_database-map_woltka-stratify.slurm  10_database-map_woltka-annotate.slurm
metaProtease/: cli.py  create_gtf.py  database_map.py  reference_count.py  reference_map.py  translate_to_protein.py  tree.sh
metadata/: sample_information_from_prep_17425.tsv
